cabal-version:      3.0
name:               space-consumers
version:            0.1.0.0
synopsis:           Improved space consumers for megaparsec
homepage:           https://github.com/Lev135/space-consumers
license:            BSD-3-Clause
license-file:       LICENSE
author:             Lev Dvorkin
maintainer:         lev_135@mail.ru
copyright:          (c) 2022, Lev Dvorkin
category:           parsing
extra-source-files: CHANGELOG.md

common basics
  default-language:   Haskell2010
  build-depends:      base
                    , megaparsec
                    , text
                    , containers
                    , case-insensitive
  ghc-options:        -Wall

library
  import:             basics
  hs-source-dirs:     src

  exposed-modules:    Text.Megaparsec.Char.Lexer.New

executable examples
  import:             basics
  hs-source-dirs:     examples

  main-is:            Main.hs
  other-modules:

  if flag(examples)
    build-depends:    space-consumers
  else
    buildable:        False

benchmark bench
  import:             basics
  type:               exitcode-stdio-1.0
  hs-source-dirs:     bench
  ghc-options:        -O2

  main-is:            Bench.hs

  build-depends:      criterion
                    , space-consumers

flag examples
  manual:             True
  default:            False
  description:        Build examples executable
