cabal-version:      3.0
name:               space-consumers
version:            0.1.0.0
synopsis:           Improved space consumers for megaparsec
description:        Provides an alternative approach for lexing and mostly for
                    indentation-sensitive parsing
homepage:           https://github.com/Lev135/space-consumers
license:            BSD-3-Clause
license-file:       LICENSE
author:             Lev Dvorkin
maintainer:         lev_135@mail.ru
copyright:          (c) 2022, Lev Dvorkin
category:           parsing
extra-source-files: CHANGELOG.md

source-repository head
    type:           git
    location:       https://github.com/Lev135/space-consumers

common basics
  default-language:   Haskell2010
  build-depends:      base >= 4.14 && < 4.17
                    , megaparsec
                    , text
                    , containers
                    , case-insensitive
                    , transformers
                    , mtl
  ghc-options:        -Wall

library
  import:             basics
  hs-source-dirs:     src

  exposed-modules:    Text.Megaparsec.Char.Lexer.New.Common
                    , Text.Megaparsec.Char.Lexer.New
                    , Text.Megaparsec.Char.Lexer.Stateful

executable examples
  import:             basics
  hs-source-dirs:     examples

  main-is:            Main.hs
  other-modules:

  if flag(examples)
    build-depends:    space-consumers
                    , parser-combinators
  else
    buildable:        False

benchmark bench
  import:             basics
  type:               exitcode-stdio-1.0
  hs-source-dirs:     bench
  ghc-options:        -O2

  main-is:            Bench.hs

  build-depends:      criterion
                    , space-consumers

flag examples
  manual:             True
  default:            False
  description:        Build examples executable
